# azile

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: customization.md
scripts/: debug.sh  dev.sh  install.sh  release.sh  run.sh
src/: azile.c  common.h  config.c  config.h  prompt.c  prompt.h  strings.c  strings.h  usage.c  usage.h
